[gd_scene load_steps=11 format=3 uid="uid://drttb8b63mfqc"]

[ext_resource type="Script" path="res://Scenes/Wireframe/PlayerSphere.gd" id="1_pedif"]
[ext_resource type="Material" uid="uid://qijk8ioao787" path="res://Scenes/Wireframe/WireSpehere2Material.tres" id="2_p6wje"]
[ext_resource type="AudioStream" uid="uid://cy06kyrygoqaq" path="res://Scenes/Wireframe/Sounds/Voicy_Derezz.mp3" id="3_jwrf5"]
[ext_resource type="Script" path="res://Scenes/Wireframe/CollisionSound.gd" id="4_owxs5"]
[ext_resource type="AudioStream" uid="uid://dbgtgj21etwsn" path="res://Scenes/Wireframe/Sounds/glassding1.ogg" id="5_7bfrd"]
[ext_resource type="AudioStream" uid="uid://bn5it7x3lk3a1" path="res://Scenes/Wireframe/Sounds/glassding2.ogg" id="6_w8ywh"]
[ext_resource type="AudioStream" uid="uid://bb3kpqhg34hfy" path="res://Scenes/Wireframe/Sounds/glassding3.ogg" id="7_v4x28"]
[ext_resource type="AudioStream" uid="uid://n2bikawmxyyp" path="res://Scenes/Wireframe/Sounds/glassding4.ogg" id="8_hxdah"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_1mvm5"]
friction = 4.0
bounce = 0.5

[sub_resource type="SphereShape3D" id="SphereShape3D_wsm77"]

[node name="PlayerBall" type="RigidBody3D"]
mass = 50.0
physics_material_override = SubResource("PhysicsMaterial_1mvm5")
script = ExtResource("1_pedif")

[node name="PlayerSphere" type="CSGSphere3D" parent="."]
ignore_occlusion_culling = true
instance_shader_parameters/coverage = 0.9
instance_shader_parameters/laser_color = Color(0, 2, 0, 1)
rings = 7
material = ExtResource("2_p6wje")

[node name="OmniLight3D" type="OmniLight3D" parent="PlayerSphere"]
light_color = Color(0.0666667, 0.65098, 0, 1)
light_energy = 0.2
light_size = 0.5
light_specular = 0.1
shadow_enabled = true
omni_range = 13.24
omni_attenuation = 1.86607

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_wsm77")

[node name="DeathSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_jwrf5")

[node name="CollisionSound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("5_7bfrd")
volume_db = 4.593
max_polyphony = 3
script = ExtResource("4_owxs5")
Sounds = Array[AudioStream]([ExtResource("5_7bfrd"), ExtResource("6_w8ywh"), ExtResource("7_v4x28"), ExtResource("8_hxdah")])
